<resources>
    <string name="app_name">NewsManager</string>
    <string name="news_title">News Title</string>
    <string name="news_subtitle">News Subtitle</string>
    <string name="news_abstract">News Abstract</string>
    <string name="category">Category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_body">News Body</string>
    <string name="author">Author</string>
    <string name="publish_date">Publish date</string>
    <string name="log_in">LOG IN</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="national">National</string>
    <string name="economy">Economy</string>
    <string name="sport">Sports</string>
    <string name="technology">Technology</string>
    <string name="categories">Categories</string>
    <string name="user_name">User name</string>
    <string name="account">Account</string>
    <string name="remember_me">Remember me</string>
    <string name="home">Home</string>
    <string name="edit_news">Edit News</string>
    <string name="log_out">Log Out</string>
    <string name="create_news">Create News</string>
    <string name="select_image">Select Image</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="news">News</string>
    <string name="log_out_success">Log Out Success</string>
    <string name="ok">OK</string>
    <string name="select_a_category">Select a category</string>
    <string-array name="categories">
        <item>Economy</item>
        <item>National</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>
</resources>
